style.css
body {
    min-height: 100vh;
    font-family: "Lucida Console", "Courier New", monospace;
    display:flex;
    flex-direction: column;
    margin:0;
}

/* header section */
.top {
    background-color: #1f2937;
    color:#F9FAF8;   
    }

.header {
    display:flex;
    font-size: 24px;
    width:100%;
    justify-content: space-around;
    align-items: center;
    padding: 15px 0;
        }
header {
    font-weight:700;
}
ul, a {
    display:flex;
    list-style-type: none;
    font-size:18px;
    color:#E5E7EB;
    text-decoration: none;
    gap: 15px;
}
/* title section */

h1 {
font-size: 42px;
font-weight: 900;
margin:0;
}

.title {
    background-color: #1f2937;
    color:#E5E7EB;
    padding: 75px 50px 150px 50px;
    }

.title-container {
    display:flex;
    justify-content: space-around;
    gap:25px;
}
.title-text {
    display:flex;
    flex-direction: column;
    width:30%;
    }

.title p {
    font-size:18px;
    color:#E5E7EB;
}

.title img {
    width:425px;
    height:200px;
    background-color: #E5E7EB;
    border:4px solid #E5E7EB;
    
   
}

button {
    background-color: #3882f6;
    border-radius: 15px;
    border:0em;
    border-color:#3882f6;
    color:#F9FAF8;
    padding:5px 18px;
    font-weight: 700;
    font-size: 14px;
    width:100px;
    
}

/* info section */

.info-container {
    display:flex;
    padding:50px;
    text-align: center;
    align-items: center;
    justify-content:center;
    gap:52px;
}

.info {
    max-width: 200px;
}

.infoimg {
    border: 4px solid #3882f6;
    border-radius: 20px;
    width: 150px;
    height:150px;
}

.info-header {
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    text-align: center;
}

/* quote section */
.quote-container {
    background-color:#E5E7EB;
    color:#1f2937;
    font-style:italic;
    font-size: 24px;
    padding: 50px;
    display:flex;
    justify-content: center;
}

.quote-text {
display: flex;
flex-direction: column;
align-items: flex-end;
width:50%
}
.quote-text h3 {
    font-weight:100;
    margin:0;
}
.quote-text p {
    font-weight:700;
    margin:0;
}
/* call to action section */

.cta-box {
    display:flex;
    padding:75px;
    color:#E5E7EB;
    font-size: 16px;
    justify-content: center;
    align-items: center;
}

.cta-content {
    display: flex;
    background-color: #3882f6;
    padding: 25px 50px;
    border-radius: 10px;
    width:60%;
    justify-content: space-around;
    height: 125px;
    align-items: center;
}

.cta-text {
    display:flex;
    flex-direction: column;
}
.cta-box button {
    border: 2px solid #E5E7EB;
    flex: 0 1 auto;
    min-width: 118px;
    max-height: 35px;
    align-self: center;
}

.cta-text p {
    margin-top:0;
}
.cta-text h3 {
    font-weight: 1000;
    margin-bottom: 0; 
    font-size:24px;
}


/*footer section */
.footer {
    background-color: #1f2937;
    color: #E5E7EB;
    display:flex;
    align-items: center;
    justify-content: center;
}

.container {
    flex:1;
    
}

